--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <header class="header">
+        <logo class="logo">
+            <div class="logo__picture-wrap">
+                <a href="#" class="logo__link">
+                    <img src="images/companys/logoPicture.svg" alt="logoLocalize" class="logo__picture">
+                </a>
+            </div>
+        </logo>
+        <div class="menu-wrap">
+            <ul class="menu">
+                <li class="menu__item">
+                    <a href="#" class="menu__link menu__link--current">
+                        Product
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        Features
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        Pricing
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        Case studies
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        Resources
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="header__btn-wrap">
+            <a href="#" class="header__btn-transperent btn">
+                Log in
+            </a>
+            <a href="#" class="header__btn btn">
+                Try it free
+            </a>
+        </div>
+    </header>
     
+
 </body>
+
 </html>
