changed style.css- added styles for hero , chaged index.html - added content for hero , and for company

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <header class="header">
         <logo class="logo">
@@ -55,7 +56,71 @@
             </a>
         </div>
     </header>
-    
+    <div class="hero">
+        <div class="container">
+            <div class="hero__items-wrap">
+                <div class="hero__article">
+                    <div class="hero__title">
+                        Accelerate localization from code to delivery
+                    </div>
+                    <p class="hero__text">
+                        A localization and translation management platform for agile teams. Embrace automation, workflow
+                        transparency, and fast project delivery.
+                    </p>
+                    <div class="hero__btn-wrap">
+                        <a href="#" class="hero__btn btn">
+                            Try it free
+                        </a>
+                        <a href="#" class="hero__btn-transperent btn">
+                            Book a demo
+                        </a>
+                    </div>
+                    <div class="hero__manual">
+                        Try all features for 14 days · No credit card required
+                    </div>
+                </div>
+                <div class="hero__picture-wrap picture-wrap">
+                    <img src="images/companys/fromCodeTodelivery.svg" alt="fromCodeTodelivery">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="company">
+        <div class="container">
+            <div class="company_items-wrap">
+                <div class="company__title">
+                    <div class="company__title">
+                        The preferred localization tool of 1500+ companies
+                    </div>
+                    <div class="company__img-wrap">
+                        <div class="company__img-item">
+                            <img src="images/companys/companySpecializedLogo.svg" alt="companySpecializedLogo"
+                                class="company__img">
+                        </div>
+                        <div class="company__img-item">
+                            <img src="images/companys/companyVirginLogo.svg" alt="companyVirginLogo"
+                                class="company__img">
+                        </div>
+                        <div class="company__img-item">
+                            <img src="images/companys/companyTidalLogo.svg" alt="companyTidalLogo" class="company__img">
+                        </div>
+                        <div class="company__img-item">
+                            <img src="images/companys/companyRevoulLogo.svg" alt="companyRevoulLogo"
+                                class="company__img">
+                        </div>
+                        <div class="company__img-item">
+                            <img src="images/companys/companyYelpLogo.svg" alt="companyYelpLogo" class="company__img">
+                        </div>
+                        <div class="company__img-item">
+                            <img src="images/companys/companyDaimlerLogo.svg" alt="companyDaimlerLogo"
+                                class="company__img">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
