changed style.css - added styles to company box

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="hero__picture-wrap picture-wrap">
-                    <img src="images/companys/fromCodeTodelivery.svg" alt="fromCodeTodelivery">
+                    <img src="images/companys/fromCodeTodelivery.svg" alt="fromCodeTodelivery" class="hero__picture">
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
     <div class="company">
         <div class="container">
             <div class="company_items-wrap">
-                <div class="company__title">
+                <h2 class="company__title"></h2>
                     <div class="company__title">
                         The preferred localization tool of 1500+ companies
                     </div>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
 
-                </div>
+                
             </div>
         </div>
     </div>
