changed style.css - added styles for contents box and boxes in it, changed index.html added ontents box

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -88,37 +88,121 @@
     <div class="company">
         <div class="container">
             <div class="company_items-wrap">
-                <h2 class="company__title"></h2>
-                    <div class="company__title">
-                        The preferred localization tool of 1500+ companies
+                <h2 class="company__title">
+                    The preferred localization tool of 1500+ companies
+                </h2>
+                <div class="company__img-wrap">
+                    <div class="company__img-item">
+                        <img src="images/companys/companySpecializedLogo.svg" alt="companySpecializedLogo"
+                            class="company__img">
                     </div>
-                    <div class="company__img-wrap">
-                        <div class="company__img-item">
-                            <img src="images/companys/companySpecializedLogo.svg" alt="companySpecializedLogo"
-                                class="company__img">
-                        </div>
-                        <div class="company__img-item">
-                            <img src="images/companys/companyVirginLogo.svg" alt="companyVirginLogo"
-                                class="company__img">
-                        </div>
-                        <div class="company__img-item">
-                            <img src="images/companys/companyTidalLogo.svg" alt="companyTidalLogo" class="company__img">
-                        </div>
-                        <div class="company__img-item">
-                            <img src="images/companys/companyRevoulLogo.svg" alt="companyRevoulLogo"
-                                class="company__img">
-                        </div>
-                        <div class="company__img-item">
-                            <img src="images/companys/companyYelpLogo.svg" alt="companyYelpLogo" class="company__img">
-                        </div>
-                        <div class="company__img-item">
-                            <img src="images/companys/companyDaimlerLogo.svg" alt="companyDaimlerLogo"
-                                class="company__img">
-                        </div>
+                    <div class="company__img-item">
+                        <img src="images/companys/companyVirginLogo.svg" alt="companyVirginLogo" class="company__img">
                     </div>
-
-                
+                    <div class="company__img-item">
+                        <img src="images/companys/companyTidalLogo.svg" alt="companyTidalLogo" class="company__img">
+                    </div>
+                    <div class="company__img-item">
+                        <img src="images/companys/companyRevoulLogo.svg" alt="companyRevoulLogo" class="company__img">
+                    </div>
+                    <div class="company__img-item">
+                        <img src="images/companys/companyYelpLogo.svg" alt="companyYelpLogo" class="company__img">
+                    </div>
+                    <div class="company__img-item">
+                        <img src="images/companys/companyDaimlerLogo.svg" alt="companyDaimlerLogo" class="company__img">
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <div class="contens">
+        <div class="container">
+            <article class="contents__article">
+                <div class="contents__description">
+                    <h2 class="contents__title">
+                        Control the localization process
+                    </h2>
+                    <p class="contents__text">
+                        Collaborate with your team in a single workspace. Add and assign <a href="#"
+                            class="contents__hypertext">tasks</a>, track progress, and enjoy a seamless localization
+                        workflow where you know who is doing what and when.
+                    </p>
+                    <a href="#" class="contents__link">
+                        Start now
+                    </a>
+                </div>
+                <div class="contents__picture-wrap">
+                    <img src="images/options/projectsPicture.png" alt="projectsPicture" class="contents__picture">
+                </div>
+            </article>
+        </div>
+        <div class="container">
+            <article class="contents__article">
+                <div class="contents__picture-wrap">
+                    <img src="images/options/shortenTimePicture.png" alt="shortenTimePicture" class="contents__picture">
+                 </div>
+                <div class="contents__description">
+                    <h2 class="contents__title">
+                        Shorten time to market
+                    </h2>
+                    <p class="contents__text">
+                        Localize your product in parallel with the development cycle. Use the <a href="#"
+                            class="contents__hypertext"> Adobe XD</a>,
+                        <a href="#" class="contents__hypertext">Figma</a>, and <a href="#"
+                            class="contents__hypertext">Sketch</a> plugins to start working on translations as
+                        soon as the product design is ready. No more idle waiting.
+                    </p>
+                    <a href="#" class="contents__link">
+                        Start now
+                    </a>
+                </div>               
+            </article> 
+        </div>
+        <div class="container">
+            <article class="contents__article">
+                <div class="contents__description">
+                    <h2 class="contents__title">
+                        Ensure quality
+                    </h2>
+                    <p class="contents__text">
+                        Use built-in tools — e.g. <a href="#" class="contents__hypertext">translation memory</a>,
+                        machine translation, and <a href="#" class="contents__hypertext">QA checks</a> — to enhance the
+                        quality and cohesion of translations. Add product <a href="#"
+                            class="contents__hypertext">screenshots</a> for context and use the <a href="#"
+                            class="contents__hypertext">in-context editors</a> for instant previews.
+                    </p>
+                    <a href="#" class="contents__link">
+                        Start now
+                    </a>
+                </div>
+                <div class="contents__picture-wrap">
+                    <img src="images/options/ensureQualityPicture.png" alt="ensureQualityPicture"        class="contents__picture">
+                </div>
+            </article>
+        </div>
+        <div class="container">
+            <article class="contents__article">
+                <div class="contents__picture-wrap">
+                    <img src="images/options/formulaPicture.png" alt="formulaPicture" class="contents__picture">
+                </div>
+                <div class="contents__description">
+                    <h2 class="contents__title">
+                        Less work for developers
+                    </h2>
+                    <p class="contents__text">
+                        Eliminate the hassle of localization and let developers get back to their main tasks. Save hours
+                        with the powerful <a href="#" class="contents__hypertext">API</a>, <a href="#"
+                            class="contents__hypertext">CLI</a>, <a href="#" class="contents__hypertext">mobile
+                            SDKs</a>, and integrations with <a href="#" class="contents__hypertext">GitHub</a>, <a
+                            href="#" class="contents__hypertext">Bitbucket</a>, <a href="#"
+                            class="contents__hypertext">JIRA</a>, and more.
+                    </p>
+                    <a href="#" class="contents__link">
+                        Start now
+                    </a>
+                </div>
+      
+            </article>
         </div>
     </div>
 
