changed index.html - added options box with pictures , h4 , paragraphs, hypertexts. Changed style.css - added styles for options box.

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Localise_ArtemYershov_09</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -140,7 +140,7 @@
             <article class="contents__article">
                 <div class="contents__picture-wrap">
                     <img src="images/options/shortenTimePicture.png" alt="shortenTimePicture" class="contents__picture">
-                 </div>
+                </div>
                 <div class="contents__description">
                     <h2 class="contents__title">
                         Shorten time to market
@@ -155,8 +155,8 @@
                     <a href="#" class="contents__link">
                         Start now
                     </a>
-                </div>               
-            </article> 
+                </div>
+            </article>
         </div>
         <div class="container">
             <article class="contents__article">
@@ -176,7 +176,8 @@
                     </a>
                 </div>
                 <div class="contents__picture-wrap">
-                    <img src="images/options/ensureQualityPicture.png" alt="ensureQualityPicture"        class="contents__picture">
+                    <img src="images/options/ensureQualityPicture.png" alt="ensureQualityPicture"
+                        class="contents__picture">
                 </div>
             </article>
         </div>
@@ -201,11 +202,100 @@
                         Start now
                     </a>
                 </div>
-      
+
             </article>
         </div>
     </div>
+    <div class="options">
+        <div class="container">
+            <h2 class="options__title">
+                What can you localize with Lokalise?
+            </h2>
+            <div class="options__items">
+                <div class="option__item">
+                    <div class="option__picture-wrap">
+                        <img src="images/optionsTwo/webAppsPicture.svg" alt="webAppsPicture" class="option__picture">
+                    </div>
+                    <div class="option__description">
+                        <h4 class="options__titles">
+                            Web apps
+                        </h4>
+                        <p class="option__text">
+                            Any kind of web apps — backend, frontend, single page, blogs — you name it.
+                        </p>
+                    </div>
+                </div>
+                <div class="option__item">
+                    <div class="option__picture-wrap">
+                        <img src="images/optionsTwo/mobileAppsPicture.svg" alt="mobileAppsPicture"
+                            class="option__picture">
+                    </div>
+                    <div class="option__description">
+                        <h4 class="options__titles">
+                            Mobile apps
+                        </h4>
+                        <p class="option__text">
+                            Upload any mobile platform language files. Embed <a href="" class="options__hypertext">Lokalise iOS SDK</a> or <a href="" class="options__hypertext">Lokalise Android SDK</a> if you prefer. 
+                        </p>
+                    </div>
+                </div>
+                <div class="option__item">
+                    <div class="option__picture-wrap">
+                        <img src="images/optionsTwo/gamesPicture.svg" alt="gamesPicture" class="option__picture">
+                    </div>
+                    <div class="option__description">
+                        <h4 class="options__titles">
+                            Games
+                        </h4>
+                        <p class="option__text">
+                            Our cloud software is trusted by many leading game developers around the world.
+                        </p>
+                    </div>
+                </div>
+                <div class="option__item">
+                    <div class="option__picture-wrap">
+                        <img src="images/optionsTwo/documentsPicture.svg" alt="documentsPicture"
+                            class="option__picture">
+                    </div>
+                    <div class="option__description">
+                        <h4 class="options__titles">
+                            Documents
+                        </h4>
+                        <p class="option__text">
+                            Upload your DOCX and static HTML files.
+                        </p>
+                    </div>
+                </div>
+                <div class="option__item">
+                    <div class="option__picture-wrap">
+                        <img src="images/optionsTwo/marketsEmailsPicture.svg" alt="marketsEmailsPicture"
+                            class="option__picture">
+                    </div>
+                    <div class="option__description">
+                        <h4 class="options__titles">
+                            Marketing e-mails
+                        </h4>
+                        <p class="option__text">
+                            Integrate with Salesforce Marketing Cloud (coming soon) or translate static e-mails.
+                        </p>
+                    </div>
+                </div>
+                <div class="option__item">
+                    <div class="option__picture-wrap">
+                        <img src="images/optionsTwo/ioTPicture.svg" alt="ioTPicture" class="option__picture">
+                    </div>
+                    <div class="option__description">
+                        <h4 class="options__titles">
+                            IoT
+                        </h4>
+                        <p class="option__text">
+                            We support most popular localization file formats.
+                        </p>
+                    </div>
+                </div>
+            </div>
 
+        </div>
 </body>
 
 </html>
