--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -235,7 +235,9 @@
                             Mobile apps
                         </h4>
                         <p class="option__text">
-                            Upload any mobile platform language files. Embed <a href="" class="options__hypertext">Lokalise iOS SDK</a> or <a href="" class="options__hypertext">Lokalise Android SDK</a> if you prefer. 
+                            Upload any mobile platform language files. Embed <a href="#"
+                                class="options__hypertext">Lokalise iOS SDK</a> or <a href="#"
+                                class="options__hypertext">Lokalise Android SDK</a> if you prefer.
                         </p>
                     </div>
                 </div>
@@ -294,8 +296,66 @@
                     </div>
                 </div>
             </div>
-
         </div>
+    </div>
+    <div class="team">
+        <div class="container">
+            <h2 class="team__title">
+                Boost your localization team’s productivity tenfold
+            </h2>
+            <div class="team__items">
+                <div class="team__item">
+                    <div class="team__picture-wrap">
+                        <img src="images/boostTeam/managersPicture.svg" alt="managersPicture" class="team__picture">
+                    </div>
+                    <div class="team__description">
+                        <h3 class="team__titles">
+                            Managers
+                        </h3>
+                        <p class="team__text">
+                            Update existing and launch new features and products while simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other markets.
+                        </p>
+                        <a href="#" class="team__link">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="team__item">
+                    <div class="team__picture-wrap">
+                        <img src="images/boostTeam/developersPicture.svg" alt="developersPicture" class="team__picture">
+                    </div>
+                    <div class="team__description">
+                        <h3 class="team__titles">
+                            Developers
+                        </h3>
+                        <p class="team__text">
+                            Set up an integration with your code repository or your own custom SDK via Lokalise's <a href="#" class="team__hypertext">powerful API</a>. Do that once, and every time you make changes in the code, they'll be automatically imported to Lokalise for translation.
+                        </p>
+                        <a href="#" class="team__link">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="team__item">
+                    <div class="team__picture-wrap">
+                        <img src="images/boostTeam/translatorsPicture.svg" alt="translatorsPicture" class="team__picture">
+                    </div>
+                    <div class="team__description">
+                        <h3 class="team__titles">
+                            Translators
+                        </h3>
+                        <p class="team__text">
+                            Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
+                        </p>
+                        <a href="#" class="team__link">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
