changed index.html - added quote box with quoteblock, divs, p, img. Changed style .css - adde styles for quote box

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -313,7 +313,9 @@
                             Managers
                         </h3>
                         <p class="team__text">
-                            Update existing and launch new features and products while simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other markets.
+                            Update existing and launch new features and products while simultaneously localizing them in
+                            multiple languages. Streamline your team's workflow, maximize productivity, and speed up
+                            expansion to other markets.
                         </p>
                         <a href="#" class="team__link">
                             Learn more
@@ -329,7 +331,9 @@
                             Developers
                         </h3>
                         <p class="team__text">
-                            Set up an integration with your code repository or your own custom SDK via Lokalise's <a href="#" class="team__hypertext">powerful API</a>. Do that once, and every time you make changes in the code, they'll be automatically imported to Lokalise for translation.
+                            Set up an integration with your code repository or your own custom SDK via Lokalise's <a
+                                href="#" class="team__hypertext">powerful API</a>. Do that once, and every time you make
+                            changes in the code, they'll be automatically imported to Lokalise for translation.
                         </p>
                         <a href="#" class="team__link">
                             Learn more
@@ -338,14 +342,17 @@
                 </div>
                 <div class="team__item">
                     <div class="team__picture-wrap">
-                        <img src="images/boostTeam/translatorsPicture.svg" alt="translatorsPicture" class="team__picture">
+                        <img src="images/boostTeam/translatorsPicture.svg" alt="translatorsPicture"
+                            class="team__picture">
                     </div>
                     <div class="team__description">
                         <h3 class="team__titles">
                             Translators
                         </h3>
                         <p class="team__text">
-                            Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
+                            Eliminate double-work and neverending revisions with visual context (screenshots) and live
+                            previews. Improve the quality and speed of your translations with built-in CAT tools, like
+                            autocomplete, inline machine translation, and translation memory.
                         </p>
                         <a href="#" class="team__link">
                             Learn more
@@ -355,6 +362,30 @@
             </div>
         </div>
     </div>
+    <div class="quote">
+        <div class="container">
+            <div class="wrap">
+                <div class="quote__body-wrap">
+                    <blockquote class="quote__item">
+                        <p class="quote__text"> “Lokalise has turned a task we were dreading into an absolute pleasure.
+                            Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots
+                            has been a lifesaver, and over-the-air updates are the icing on the cake.”
+                        </p>
+                    </blockquote>
+                    <p class="quote__author">
+                        Edward Cooper, Chief Mobile Officer
+                    </p>
+                    <div class="quote__logo-wrap">
+                        <img src="images/edwardsArticle/revoltLogo.svg" alt="edwardsPicture" class="quote__logo">
+                    </div>
+                </div>
+                <div class="quote__foto-wrap">
+                    <img src="images/edwardsArticle/edwardsPicture.svg" alt="edwardsPicture" class="quote__foto">
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
