changed index.html - added rewards box with divs, p, img. Changed style .css - adde styles for rewards box

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -385,7 +385,28 @@
             </div>
         </div>
     </div>
-
+    <div class="rewards">
+        <div class="container">
+            <div class="rewards__items">
+                <div class="rewards__logo">
+                    <div class="rewards___img-wrap">
+                        <img src="images/rewards/cakePicture.svg" alt="cakePicture" class="rewards__picture">
+                    </div>
+                    <h2 class="rewards__title">
+                        The most-loved translation management software
+                    </h2>
+                </div>
+                <div class="rewards__item">
+                    <div class="rewards___picture-wrap">
+                        <img src="images/rewards/lovePicture.svg" alt="lovePicture" class="rewards__picture">
+                    </div>
+                    <div class="rewards___picture-wrap">
+                        <img src="images/rewards/capterraPicture.svg" alt="capterraPicture" class="rewards__picture">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
