changed index.html - added integrate box with divs, p, img. Changed style .css - adde styles for integrate box

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -407,6 +407,28 @@
             </div>
         </div>
     </div>
+    <div class="integrate">
+        <div class="container">
+            <div class="integrate__wrap">
+                <h2 class="integrate__title">
+                    Integrate Lokalise with your work tools
+                </h2>
+                <p class="integrate__text">
+                    Automate processes, eliminate routine tasks, and track progress with ease.
+                </p>
+                <div class="integrate__picture-wrap">
+                    <img src="images/integrate/birdPic.png" alt="birdPic" class="integrate__picture">
+                </div>
+                <div class="integrate__btn-wrap">
+                    <a href="#" class="integrate__btn btn">
+                        See all integrations
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 </body>
 
