changed index.html - added localization box with divs, p, h1. Changed style .css - adde styles for localization box

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -427,6 +427,23 @@
             </div>
         </div>
     </div>
+    <div class="localization">
+        <div class="container">
+            <div class="localization__wrap">
+                <h1 class="localization__title">
+                    Localization made easy. Why wait?
+                </h1>
+                <p class="localization__text">
+                    Try for free or let us show you how it works.
+                </p>
+                <div class="localization__btn-wrap">
+                <a href="#" class="localization__btn .btn">
+                    Try it free
+                </a>                
+            </div>
+            </div>
+        </div>
+    </div>
 
 
 
